--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
   "homepage": "https://github.com/ArlonTuazon/food-festival#readme",
   "devDependencies": {
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.2.0",
+    "image-webpack-loader": "^7.0.1",
+    "sw-precache-webpack-plugin": "^1.0.0",
     "webpack": "^5.24.2",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-pwa-manifest": "^4.3.0"
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
-    "image-webpack-loader": "^7.0.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   }
